--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- STYLE -->
     <link rel="stylesheet" href="./style/index.css">
-    <title>Bo-zap</title>
+    <title>Bool-zapp</title>
 </head>
 <body>
     <div class="container position-absolute top-50 start-50 translate-middle h90">
         <div class="row">
-            <div class="col-4 p-0">
+            <div class="col-4 d-flex flex-column p-0">
                 <!-- Sectione dedicata all'utente e alla modifica delle impostazioni-->
                 <section class="user_option d-flex justify-content-between base_color">
                     <div class="d-flex align-items-center p-2">
                         <img src="./img/avatar_io.jpg" alt="user img" class="user_img me-2 rounded_border">
                         Nome Utente
                     </div>
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center mx-3">
                         <i class="fas fa-circle-notch m-2"></i>
                         <i class="fas fa-comment-alt m-2"></i>
                         <i class="fas fa-ellipsis-v m-2"></i>
@@ -33,14 +33,26 @@
                 <!-- Section di notifiche -->
                 <section class="notification p-3 d-flex align-items-center light_blue">
                     <div class="d-inline-block p-2 white rounded_border">
-                        <i class="fas fa-bell-slash"></i>
+                        <i class="fas fa-bell-slash align-middle text-center"></i>
                     </div>
-                    <div class="d-inline-block">
+                    <div class="d-inline-block ms-2 lh-sm">
                         <div class="">Ricevi notifiche di nuovi messaggi</div>
-                        <div class="">Attiva notifiche desktop</div>
+                        <div class="font_small color_gray text-decoration-underline">Attiva notifiche desktop</div>
                     </div>
                 </section>
-
+                <!-- Section di ricerca-->
+                <section class="search p-1 base_color">
+                    <div class="input-group">
+                        <span class="input-group-text white">
+                            <i class="fas fa-search mx-3"></i>
+                        </span>
+                        <input type="text" class="form-control font_small" placeholder="Cerca o inizia una nuova chat" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                </section>
+                <!-- Section dedicata alla lista contatti e alle chat aperte -->
+                <section class="contacts flex-grow-1 blue">
+                    
+                </section>
             </div>
             <div class="col-8 blue"></div>
         </div>
