--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> 
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,18 +14,19 @@
     <link rel="stylesheet" href="./style/index.css">
     <title>Bool-zapp</title>
     <!-- DATA -->
-    <script src="./js/users.js"></script>
+    <script src="./js/data.js"></script>
 </head>
 <body>
-    <div class="contenitore position-absolute top-50 start-50 translate-middle green" id="app">
+    <div class="contenitore position-absolute top-50 start-50 translate-middle " id="app">
         <div class="row h-100">
-            <div class="col-4">
+            <!-- COLONNA DI NAVIGAZIONE -->
+            <div class="col-4 p-0 border-end border-2">
                 <!-- Section dedicata all'utente e alla modifica delle impostazioni-->
-                <section class="user_option d-flex justify-content-between base_color">
+                <section class="user_display d-flex justify-content-between base_color">
                     <div class="d-flex align-items-center">
-                        <img v-bind:src="'./img/avatar' + user.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
+                        <img v-bind:src="'./img/avatar' + data.user.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
                         rounded-circle">
-                        Nome Utente
+                        <span>Nome Utente</span>
                     </div>
                     <div class="d-flex align-items-center mx-2">
                         <i class="fas fa-circle-notch m-2"></i>
@@ -53,18 +54,50 @@
                     </div>
                 </section>
                 <!-- Section dedicata alla lista contatti e alle chat aperte -->
-                <section class="contacts overflow-scroll blue">
-                    <div v-for="contact in search(searchedUser)" class="d-flex align-items-center p-2 border-top white hover_gray">
+                <section class="contacts overflow-scroll base_color">
+                    <div v-for="contact in search(searchedUser)" class="d-flex align-items-center p-2 border-top white interaction_gray" v-on:click="selectedContact = contact">
                         <img v-bind:src="'./img/avatar' + contact.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
                         rounded-circle">
                         {{ contact.name }}
                     </div>
                 </section>
             </div>
-            <div class="col-8"></div>
+            <!-- COLONNA CHAT -->
+            <div class="col-8 p-0">
+                <!-- Section di intestazione destinatario messaggi + impostazioni-->
+                <section class="user_display d-flex justify-content-between base_color">
+                    <div class="d-flex align-items-center">
+                        <img v-bind:src="'./img/avatar' + selectedContact.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
+                        rounded-circle">
+                        <div>
+                            <div>{{selectedContact.name}}</div>
+                            <div class="font_small color_gray lh-sm">Ultimo accesso oggi alle...</div>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center mx-2">
+                        <i class="fas fa-search m-2"></i>
+                        <i class="fas fa-paperclip m-2"></i>
+                        <i class="fas fa-ellipsis-v m-2"></i>
+                    </div>
+                </section>
+                <!-- Section dedicata alla visualizzazione della chat -->
+                <section class="chat_display">
+
+                </section>
+                <!-- Section dedicata alla scrittura e all'invio di messaggi -->
+                <section class="messages beige">
+                    <div class="row h-100 align-items-center">
+                        <div class="col-auto"><i class="far fa-smile ms-4"></i></div>
+                        <div class="col">
+                            <input class="form-control form-control-lg font_small color_gray lh-lg border-0" type="text" placeholder="Scrivi un messaggio" aria-label=".form-control-lg">
+                        </div>
+                        <div class="col-auto"><i class="fas fa-microphone me-4"></i></div>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
     <!-- SCRIPT -->
     <script src="./js/index.js"></script>
 </body>
-</html>
+
