--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </section>
                 <!-- Section dedicata alla lista contatti e alle chat aperte -->
                 <section class="contacts overflow-scroll base_color">
-                    <div v-for="contact in search(searchedUser)" class="d-flex align-items-center p-2 border-top white interaction_gray" v-on:click="selectedContact = contact">
+                    <div v-for="contact in search(searchedUser)" class="d-flex align-items-center p-2 border-top white interaction_gray" v-on:click="selectedContact = contact, selectedMessage = undefined">
                         <img v-bind:src="'./img/avatar' + contact.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
                         rounded-circle">
                         {{ contact.name }}
@@ -96,7 +96,7 @@
                                 <div class="dropdown position-absolute top-0 end-0">
                                     <button class="btn btn-secondary dropdown-toggle button_reset" :class="message.status == 'sent' ? 'sent_color' : 'received_color'" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                      <li><a class="dropdown-item" href="#">Evidenzia messaggio</a></li>
+                                      <li><a @click="selectedMessage = message" class="dropdown-item" href="#">Evidenzia messaggio</a></li>
                                       <li><a @click="deleteMessage(index)" class="dropdown-item" href="#">Cancella messaggio</a></li>
                                     </ul>
                                   </div>
@@ -107,7 +107,21 @@
                     </div>
                 </section>
                 <!-- Section dedicata alla scrittura e all'invio di messaggi -->
-                <section class="messages beige">
+                <section class="messages beige position-relative">
+                    <div v-if="selectedMessage != undefined" class="beige position-absolute top-0 w-100 translateY-100">
+                        <div class="row h-100 align-items-center py-3">
+                            <div class="col-auto invisible">
+                                <i class="fas fa-times ms-4"></i>
+                            </div>
+                            <div class="col white p-2 rounded-2 border-start red_border border-4 lh-lg">
+                                <div class="lh-sm fw-normal red"> {{ selectedContact.name }} </div>
+                                <div class="font_small color_gray lh-sm"> {{ selectedMessage.message }} </div>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-times me-4" @click="selectedMessage = undefined"></i>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row h-100 align-items-center">
                         <div class="col-auto"><i class="far fa-smile ms-4"></i></div>
                         <div class="col">
