--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="d-flex align-items-center">
                         <img v-bind:src="'./img/avatar' + data.user.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
                         rounded-circle">
-                        <span>Nome Utente</span>
+                        <span>{{data.user.name}}</span>
                     </div>
                     <div class="d-flex align-items-center me-2">
                         <i class="fas fa-circle-notch m-2"></i>
@@ -66,7 +66,13 @@
                     <div v-for="contact in search(searchedUser)" class="d-flex align-items-center p-2 border-top white interaction_gray" v-on:click="selectedContact = contact, selectedMessage = undefined">
                         <img v-bind:src="'./img/avatar' + contact.avatar + '.jpg'" alt="user img" class="user_img mx-2 '
                         rounded-circle">
-                        {{ contact.name }}
+                        <div class="message_preview_display">
+                            {{ contact.name }}
+                            <div class="font_small color_gray lh-sm">
+                                {{ contact.messages[contact.messages.length - 1].message }}
+                            </div>
+                            <div class="font_smaller color_gray lh-sm"> {{ contact.messages[contact.messages.length - 1].date.slice(10,16) }} </div>
+                        </div>
                     </div>
                 </section>
             </div>
@@ -79,7 +85,9 @@
                         rounded-circle">
                         <div>
                             <div>{{selectedContact.name}}</div>
-                            <div class="font_small color_gray lh-sm">Ultimo accesso oggi alle...</div>
+                            <div class="font_small color_gray lh-sm">
+                                {{ "Ultimo accesso alle " + getLastMessageDate() }}
+                            </div>
                         </div>
                     </div>
                     <div class="d-flex align-items-center mx-2">
@@ -114,7 +122,8 @@
                                 <i class="fas fa-times ms-4"></i>
                             </div>
                             <div class="col white p-2 rounded-2 border-start red_border border-4 lh-lg">
-                                <div class="lh-sm fw-normal red"> {{ selectedContact.name }} </div>
+                                <div v-if="selectedMessage.status == 'received'" class="lh-sm fw-normal red"> {{ selectedContact.name }} </div>
+                                <div v-else class="lh-sm fw-normal red"> {{ data.user.name }} </div>
                                 <div class="font_small color_gray lh-sm"> {{ selectedMessage.message }} </div>
                             </div>
                             <div class="col-auto">
